# local-rag-agent

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: medium-article.md
src/: __init__.py
src/agent/: agent_builder.py
src/audit/: __init__.py  audit_export.py  audit_logger.py
src/cli/: main.py
src/config/: settings.py
src/indexing/: chunker.py  document_registry.py  index_lifecycle.py  vectorstore_manager.py
src/loaders/: base_loader.py  loader_factory.py  pdf_loader.py
src/retrieval/: confidence_gate.py  retriever_middleware.py
src/security/: network_guard.py
src/ui/: main_window.py  theme.py
tests/: test_agent.py  test_cli.py  test_indexing.py  test_retrieval.py
tests/integration/: test_ollama.py
tests/unit/: test_audit.py  test_audit_export.py  test_audit_logger.py  test_indexing.py  test_lifecycle.py  test_network_guard.py  test_pdf_loader.py  test_retrieval.py  test_settings.py  test_ui.py
