[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "local-rag-agent"
version = "0.2.0"
description = "Configurable local PDF RAG tutorial using Ollama and Chroma"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
  "langchain>=0.3.14,<0.4", "langchain-community>=0.3.14,<0.4",
  "langchain-ollama>=0.1.2,<0.4", "langchain-chroma>=0.1.4,<0.3",
  "chromadb>=0.5.24,<1", "python-dotenv>=1.0,<2", "pdfplumber>=0.11,<1",
]

[project.optional-dependencies]
audit = ["sqlcipher3-wheels>=0.5.7,<0.6", "openpyxl>=3.1,<4"]
gui = ["PySide6>=6.8,<7"]
test = ["pytest>=8,<10", "reportlab>=4,<6"]

[project.scripts]
local-rag = "src.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration", "tests"]
markers = ["integration: requires a running local Ollama service"]
